--- a/app_main.html
+++ b/app_main.html
@@ -5,7 +5,7 @@
  <link rel="stylesheet" type="text/css" href="extjs/resources/css/ext-all.css">
  <script type="text/javascript" src="extjs/ext-debug.js"></script>
  <script type="text/javascript" src="common_setting.js"></script>
- <script type="text/javascript" src="app.js"></script>
+ <script type="text/javascript" src="app_main.js"></script>
 </head>
 
 <body>
